<resources>
    <string name="app_name" translatable="false">BerdaqShayir</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="text_test" translatable="false">But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain can procure him some great pleasure. To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage from it? But who has any right to find fault with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure?</string>
    <string name="poet_name">Berdaq Ǵarǵabay ulı</string>
    <string name="about_the_poet">Shayir haqqinda</string>
    <string name="list_of_songs">Qosiqlar toplami</string>
    <string name="about_as">Biz haqqimizda</string>
    <string name="settings">Sazlamalar</string>
    <string name="berdaq_shayir_qosiqlar_toplami">Berdaq shayir \nQosiqlar toplami</string>
    <string name="text_baslaw">Baslaw</string>
    <string name="change_language">Tildi ózgertiw</string>
    <string name="text_about_as">Biz haqqımızda</string>
    <string name="about_as_text">Bul qosımshanı Tashkent Pediatriya Medicina Institutı 1-pediatriya hám xalıq shıpakerlik kásibii fakulteti 433- gruppa studenti Kalbayeva Aruxan Jengisbayevna jarattı.</string>
    <string name="text_about_1">Tashkent Pediatriya Medicina Institutında Berdaq turmısına arnalǵan ilaj bolıp ótti</string>
    <string name="tv_about_2">14 -fevral alım, sarkarda, iri mámleket ǵayratkeri Zaxiriddin Muhammad Bobur tuwılıwınıń 541-jıllıǵı munasábeti menen Jazıwshılar qıyabanındaǵı shayır háykeli báyinde \'\' Jaslardı patriotlıq ruwxında tárbiyalawda Zaxiriddin Muhammad Bobur miyraslarınıń ornı hám áhmiyeti \'\' temasında ruwxıy -bilimlendiriw ilaj bolıp otdi. Sol tiykarda biz Berdaq stipendiati Utebaeva Baxargul menen birgelikte Tashkent Ishki Isler Akademiyasında oqiytigun student jaslarǵa hám de ustazlarǵa Qaraqalpaq shayırı Berdaq haqqida keń kólemde úgit-násiyatlaw jumısların alıp barildi.</string>
    <string name="tv_about_3">Berdaq ijodida-socialliq ómir talqini temasında úgit-násiyatlaw hám ilimiy dóretiwshilik jumıslar tańlawında qatnasiw ushın, Men Ózbekstan mámleket xoreografiya akademiyası de oqıytuǵın studentlerdi jiynadim hám Berdaq babamızdıń "Kelin" atlı qosıqlarına muwapıq doslarim menen birge taw jaqinına barıp videorolik shòlkemlestirdim hám bul videoroligimdi tańlawǵa qatnasıw ushın tayarladim.</string>
</resources>