<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/paper_texture"
    android:orientation="vertical"
    tools:context=".presentation.ui.MainFragment">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/berdaq"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/poet_name"
        android:fontFamily="@font/times_new_roman"
        android:textSize="24sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="(1827-1900)"
        android:fontFamily="@font/times_new_roman"
        android:textSize="18sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginHorizontal="70dp"
        android:layout_marginTop="18dp"
        android:background="#9AD0C2"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="32dp"/>

    <Button
        android:id="@+id/btn_poet_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:backgroundTint="#9DBC98"
        android:text="@string/about_the_poet"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="24dp"/>

    <Button
        android:id="@+id/btn_songs_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#9DBC98"
        android:textSize="16sp"
        android:text="@string/list_of_songs"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="24dp"/>

    <Button
        android:id="@+id/btn_about_as"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#9DBC98"
        android:textSize="16sp"
        android:text="@string/about_as"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="24dp"/>

    <Button
        android:id="@+id/btn_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#9DBC98"
        android:textSize="16sp"
        android:text="@string/settings"/>

</LinearLayout>