<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ui.AboutAsScreen">

    <View
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="#9DBC98"
        android:alpha="0.7"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/ic_back_about_as"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_left"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/tool_bar"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_about_as"
        android:textSize="22sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/tool_bar"
        app:layout_constraintStart_toStartOf="@id/tool_bar"
        app:layout_constraintEnd_toEndOf="@id/tool_bar"
        app:layout_constraintBottom_toBottomOf="@id/tool_bar"/>

    <ScrollView
        android:id="@+id/scrool_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tool_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/img_aruxan"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_marginTop="10dp"
                app:strokeColor="#9DBC98"
                app:strokeWidth="2dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/photo_aruxan"
                app:shapeAppearanceOverlay="@style/roundedImageView"/>


            <TextView
                android:id="@+id/tv_about_as"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:text="@string/about_as_text"
                app:layout_constraintTop_toBottomOf="@id/img_aruxan"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <View
                android:id="@+id/view_spacer"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:background="#9DBC98"
                android:layout_margin="10dp"
                app:layout_constraintTop_toBottomOf="@id/tv_about_as"/>

            <TextView
                android:id="@+id/tv_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/text_about_1"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/view_spacer"/>

            <ImageView
                android:id="@+id/photo_1"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:scaleType="centerCrop"
                android:layout_margin="10dp"
                android:src="@drawable/photo_1"
                app:layout_constraintTop_toBottomOf="@id/tv_1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <ImageView
                android:id="@+id/photo_2"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:scaleType="centerCrop"
                android:layout_margin="10dp"
                android:src="@drawable/photo_2"
                app:layout_constraintTop_toBottomOf="@id/photo_1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <ImageView
                android:id="@+id/photo_3"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:scaleType="centerCrop"
                android:layout_margin="10dp"
                android:src="@drawable/photo_3"
                app:layout_constraintTop_toBottomOf="@id/photo_2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <ImageView
                android:id="@+id/photo_4"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:scaleType="centerCrop"
                android:layout_margin="10dp"
                android:src="@drawable/photo_4"
                app:layout_constraintTop_toBottomOf="@id/photo_3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <View
                android:id="@+id/view_spacer_1"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:background="#9DBC98"
                android:layout_margin="10dp"
                app:layout_constraintTop_toBottomOf="@id/photo_4"/>

            <TextView
                android:id="@+id/tv_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/view_spacer_1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="10dp"
                android:text="@string/tv_about_2"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="16sp"
                />

            <ImageView
                android:id="@+id/photo_5"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:scaleType="centerCrop"
                android:layout_margin="10dp"
                android:src="@drawable/photo_5"
                app:layout_constraintTop_toBottomOf="@id/tv_2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <ImageView
                android:id="@+id/photo_6"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:scaleType="centerCrop"
                android:layout_margin="10dp"
                android:src="@drawable/photo_6"
                app:layout_constraintTop_toBottomOf="@id/photo_5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <View
                android:id="@+id/view_spacer_2"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:background="#9DBC98"
                android:layout_margin="10dp"
                app:layout_constraintTop_toBottomOf="@id/photo_6"/>

            <TextView
                android:id="@+id/tv_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/view_spacer_2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="10dp"
                android:text="@string/tv_about_3"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="16sp"
                />

            <FrameLayout
                android:id="@+id/frame_video_1"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:layout_constraintTop_toBottomOf="@id/tv_3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="10dp">

                <VideoView
                    android:id="@+id/video_1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"/>

            </FrameLayout>

            <ImageView
                android:id="@+id/photo_7"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:scaleType="centerCrop"
                android:layout_margin="10dp"
                android:src="@drawable/photo_7"
                app:layout_constraintTop_toBottomOf="@id/frame_video_1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <ImageView
                android:id="@+id/photo_8"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:scaleType="centerCrop"
                android:layout_margin="10dp"
                android:src="@drawable/photo_8"
                app:layout_constraintTop_toBottomOf="@id/photo_7"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />


            <FrameLayout
                android:id="@+id/frame_video_2"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:layout_constraintTop_toBottomOf="@id/photo_8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="10dp">

                <VideoView
                    android:id="@+id/video_2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"/>

            </FrameLayout>

            <ImageView
                android:id="@+id/photo_9"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:scaleType="centerCrop"
                android:layout_margin="10dp"
                android:src="@drawable/photo_9"
                app:layout_constraintTop_toBottomOf="@id/frame_video_2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <ImageView
                android:id="@+id/photo_10"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:scaleType="centerCrop"
                android:layout_margin="10dp"
                android:src="@drawable/photo_10"
                app:layout_constraintTop_toBottomOf="@id/photo_9"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <ImageView
                android:id="@+id/photo_11"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:scaleType="centerCrop"
                android:layout_margin="10dp"
                android:src="@drawable/photo_11"
                app:layout_constraintTop_toBottomOf="@id/photo_10"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <ImageView
                android:id="@+id/photo_12"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:scaleType="centerCrop"
                android:layout_margin="10dp"
                android:src="@drawable/photo_12"
                app:layout_constraintTop_toBottomOf="@id/photo_11"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <ImageView
                android:id="@+id/photo_13"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:scaleType="centerCrop"
                android:layout_margin="10dp"
                android:src="@drawable/photo_13"
                app:layout_constraintTop_toBottomOf="@id/photo_12"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
    



</androidx.constraintlayout.widget.ConstraintLayout>